# AppWaver

./: .gitignore  .gitmodules  CMakeLists.txt  platformio.ini  sdkconfig.custom_table  sdkconfig.custom_table_c6
components/App/HAL/hal_ports/: CMakeLists.txt  ana_port.c  bus_port.c  io_port.c  mem_port.c  ota_port.c  pwm_port.c  srl_port.c  wls_port.c
components/App/HAL/hal_ports/Docs/: Doxyfile
components/App/HAL/hal_ports/Docs/Source/: Doxyfile  gen_index_md.py  index.md
components/App/HAL/hal_ports/Docs/Test/: Doxyfile
components/App/HAL/hal_ports/Docs/html/: adc__cfg_8c_a4a99422927da0d974bb158ebb819bba9.html  adc__cfg_8c_a50300ba6e38ec30121edcc07ebac42c6.html  adc__cfg_8c_a5fddab8bc790fff28cbcc5f318e94b4f.html  adc__cfg_8h.html  adc__cfg_8h_a01e3be4f234a7bbfdffe72ec5c577a67.html  adc__cfg_8h_a4a99422927da0d974bb158ebb819bba9.html  adc__cfg_8h_a5fddab8bc790fff28cbcc5f318e94b4f.html  adc__cfg_8h_abe7f1d67be7ee0c3b39c973baa3b0d74.html  adc__cfg_8h_ad565f805239e6e9e4badf6485d4c45b7.html  adc__cfg_8h_afc340706b3e81c30f9323e065a51c7fc.html  adc__cfg_8h_source.html  adc__drv_8c.html  adc__drv_8c_a23b98895e18e6d664d121763e23d59fc.html  adc__drv_8c_a90358b97b9135448abce0f69f291d55e.html  adc__drv_8c_source.html  adc__drv_8h.html  (+38 more)
components/App/HAL/hal_ports/MakeTest/: CMakeLists.txt  test_report.txt
components/App/HAL/hal_ports/Test/: ana_hal_test.c  ana_hal_test.h  test_suite.h
components/App/HAL/hal_ports/include/: acc_it_port.h  ana_port.h  btn_port.h  bus_port.h  ind_port.h  io_port.h  mem_port.h  ota_port.h  pw_port.h  pwm_port.h  srl_port.h  wls_port.h
(+8586 files in other folders)
